<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_1">В октябре 2020 года мы вместе с моей подружкой, Настей Смирновой, сидели в поезде из Выборга в Санкт-Петербург, смотрели на свои плёночные фотоаппараты на столе и мечтали о том, что было бы классно собраться как-нибудь дома, позвать друзей, которые тоже снимают на пленку, распечатать фотографии и поболтать.</string>
    <string name="about_2">Когда мы доехали, это «когда-нибудь» не давало мне покоя. И в конце 2020 года у нас получилось собраться дома, тема выставки была: «Иное 2020», хотелось поделиться чем-то хорошим, что было в 2020 году, а то напряжение от ковида и изоляции напрягало и угнетало.</string>
    <string name="about_3">Мы позвали наших знакомых и друзей, играли в квиз, кушали пиццу, и, конечно же, фотографии напечатали и развесили в квартире. Именно тогда стало понятно, что хочется не только смотреть на них, но и говорить. </string>
    <string name="about_4">Друзья, которые не снимали на пленку, в конце фотовыставки заявили желание тоже поучаствовать, поэтому было принято решение сделать следующую фотовыставку уже мобильной фотографии. </string>
    <string name="about_5">И так все закрутилось... </string>
    <string name="likeButton">Like Button</string>
    <string name="nextButton">Next Button</string>
    <string name="imageAuthorNameText">Имя Автора Фотографии</string>
    <string name="swipeFeedButtonText">Добавь фотографии в избранное</string>
    <string name="tv_description_text">Description</string>
</resources>